--- a/.github/workflows/validate_staging.yml
+++ b/.github/workflows/validate_staging.yml
@@ -13,9 +13,9 @@ jobs:
       - name: Validate OAS
         uses: readmeio/rdme@7.1.1
         with:
-          rdme: validate openapi/openapi.yml
+          rdme: validate token-auth.yml
 
       - name: Publish OAS to staging
         uses: readmeio/rdme@7.1.1
         with:
-          rdme: openapi openapi/openapi.yml --key=${{ secrets.STAG_README_API_KEY }} --id=${{ secrets.STAG_API_DEFINITION_ID }}
+          rdme: openapi token-auth.yml --key=${{ secrets.STAG_README_API_KEY }} --id=${{ secrets.STAG_API_DEFINITION_ID }}
