Update auth path
Co-authored-by: Estêvão Francisco Fáy <estevao@getmentum.com>

--- a/token-auth.yml
+++ b/token-auth.yml
@@ -42,7 +42,7 @@ components:
       bearerFormat: JWT
 
 paths:
-  /api/accessToken/create:
+  /auth/accessToken/create:
       post:
         security:
           - Basic_Authentication: []
