--- a/.github/workflows/validate_staging.yml
+++ b/.github/workflows/validate_staging.yml
@@ -2,6 +2,7 @@ name: Validate the OpenAPI file and push to staging
 on:
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
