--- a/token-auth.yml
+++ b/token-auth.yml
@@ -47,7 +47,12 @@ paths:
         tags:
         - Token Authentication
         summary: Create an Access Token
-        description: Create an Access Token
+        description: Create a token for a registered or an unregistered user. Pass the metnum_user_id for registered users.
+        properties:
+             mentum_user_id:
+              description: The user's Mentum ID that was created during account opening.
+              type: string
+              format: uuid
         responses:
           '200':
             description:  OK
