--- a/token-auth.yml
+++ b/token-auth.yml
@@ -47,7 +47,21 @@ paths:
         tags:
         - Token Authentication
         summary: Create an Access Token
-        description: Create an Access Token
+        description: |
+          Create a token for a registered or an unregistered user. Pass the `mentum_user_id` for registered users.
+          
+          Registered user: a user account that has created an account and has a `mentum_user_id` assigned.
+          Unregistered user: a user that has not yet created an account and does not have a `mentum_user_id`.
+        requestBody:
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                    mentum_user_id:
+                      description: The user's Mentum ID that was created during account opening.
+                      type: string
+                      format: uuid
         responses:
           '200':
             description:  OK
